--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -6,7 +6,7 @@
   </div>
 </header>
 
-<div class="container">
+<!--div class="container">
   <div class="row">
     <div class="col-lg-12">
       <h1 class="page-header">Features:</h1>
@@ -16,4 +16,16 @@
       </ul>
     </div>
   </div>
+</div-->
+
+<div class="container">
+    <div class="row">
+        <ul class="list-group">
+            <li class="list-group-item">
+                <a href="#" ui-sref="list">Lista de inscritos por Curso</a>
+            </li>
+        </ul>
+    </div>
+    <div class="row" ui-view="">
+    </div>
 </div>
