D.2016-10-19: Ui-grid, NodeJS Express, Api, Rest

--- a/client/app/main/list/java/java.html
+++ b/client/app/main/list/java/java.html
@@ -1,1 +1,2 @@
-<div>This is the java view.</div>
+<!--div>This is the java view.</div-->
+  <div ui-grid="{ data: vmJava.myData }" class="myGrid"></div>
