--- a/client/app/main/list/angular/angular.html
+++ b/client/app/main/list/angular/angular.html
@@ -1,9 +1,15 @@
 <!--div>This is the angular view.</div-->
 <table ng-table="vmAngular.tableParams" class="table" show-filter="true">
     <tr ng-repeat="user in $data">
+        <td title="'Id'" filter="{ id: 'number'}" sortable="'id'">
+            {{user.id}}</td>
         <td title="'Name'" filter="{ name: 'text'}" sortable="'name'">
             {{user.name}}</td>
         <td title="'Age'" filter="{ age: 'number'}" sortable="'age'">
             {{user.age}}</td>
+        <!--td title="'Age'" filter="{ age: 'number'}" sortable="'age'">
+            {{vmAngular.getAge(user.birthDate)}}</td-->
+        <td title="'Operations'">
+            <button>Edit</button></td>
     </tr>
 </table>
