--- a/client/index.html
+++ b/client/index.html
@@ -73,13 +73,14 @@
       <script src="bower_components/ng-table/dist/ng-table.js"></script>
       <script src="bower_components/angular-ui-grid/ui-grid.js"></script>
       <script src="bower_components/angular-ui-grid/ui-grid.min.js"></script>
+      <script src="bower_components/ng-lodash/build/ng-lodash.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js(.tmp) app/app.js -->
       <script src="app/app.js"></script>
       <!-- injector:js -->
       <script src="components/util/util.module.js"></script>
-      <script src="app/test/directives/directives.controller.js"></script>
+      <script src="app/services/course/course.service.js"></script>
       <script src="app/main/list/angular/angular.js"></script>
       <script src="app/main/list/java/java.controller.js"></script>
       <script src="app/main/list/java/java.js"></script>
@@ -90,6 +91,7 @@
       <script src="app/myFilter/myFilter.filter.js"></script>
       <script src="app/myInput/myInput.directive.js"></script>
       <script src="app/main/list/angular/angular.controller.js"></script>
+      <script src="app/test/directives/directives.controller.js"></script>
       <script src="app/test/directives/directives.js"></script>
       <script src="app/test/test.controller.js"></script>
       <script src="app/test/test.js"></script>
