--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -17,3 +17,9 @@
   <div class="row" ui-view="">
   </div>
 </div>
+
+<div class="container">
+  <div class="row">
+    <a href="#" ui-sref="login">Login here</a>
+  </div>
+</div>
